added some routes

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="/stylesheets/styles.css">
 </head>
 <body>
+    <div>   
+        <h1>Maison Valentine</h1>
+        <a href="/membership/plans">Become a Member</a>
+        <a href="#">Search</a>
+        <a href="/users/profile">Profile</a>
+        <a href="#">Cart</a>
+        <nav>
+            <a href="/">HOME</a>
+            <a href="#">ORDER ONLINE</a>
+            <a href="#">ABOUT</a>
+            <a href="#">CONTACT</a>
+        </nav>
+    </div>
     {{{body}}}
 </body>
 </html>
