--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,7 @@
 <body>
     <div>   
         <h1>Maison Valentine</h1>
-        <a href="/membership/plans">Become a Member</a>
+        <a href="/subscription/available">Become a Member</a>
         <a href="#">Search</a>
         <a href="/users/profile">Profile</a>
         <a href="#">Cart</a>
