--- a/views/profile/user-profile.hbs
+++ b/views/profile/user-profile.hbs
@@ -1,3 +1,6 @@
 <h1>Profile Page</h1>
 
 <a href="/auth/logout">Logout</a>
+<a href="/users/edit"><button>Edit</button></a>     {{!-- Ruta para el edit  --}}
+<a href="/subscription/preferences">Preferences</a>     {{!-- Ruta para el preferecias No se sia se necesario? --}}
+ 
