--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,5 +1,18 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-size: 10px;
+  margin: 0;
+  padding: 0;
+  font-size: 10px;
+}
+
+.background-dessert {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-image: url("/images/Dessertall.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
