--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,3 +1,5 @@
+<div class="background-dessert">
+
 <form action="/auth/signup" method="post">
     <label for="name">Name</label>
     <input type="text" name="name" id="name">
@@ -16,7 +18,7 @@
 </form>
 
 
-
+</div>
 
 
 
