--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,18 +1,578 @@
 body {
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   padding: 0;
   font-size: 10px;
 }
 
-.background-dessert {
-  position: fixed;
-  top: 0;
-  left: 0;
+header {
+  width: 100%;
+  height: 22%;
+  display: flex;
+  flex-direction: column;
+}
+
+hr {
+  width: 100%;
+  height: auto;
+  border-top: 0.1em solid #858585;
+  margin: 0;
+}
+
+nav {
+  width: 100%;
+  height: 15%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Adamina";
+}
+nav a {
+  font-size: 1.5em;
+  color: #000000;
+  text-decoration: none;
+  margin: 0 2em;
+}
+
+.authorization {
+  width: 100%;
+  height: 78%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.banner-div {
+  width: 100%;
+  height: 15%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #e9d9da;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.banner-div a {
+  font-size: 1.5em;
+  color: #000000;
+  text-decoration: none;
+}
+
+.carousel-container {
+  height: 100%;
+  width: 100%;
+}
+.carousel-container img {
   width: 100%;
   height: 100%;
-  z-index: -1;
-  background-image: url("/images/Dessertall.jpg");
+}
+
+.edit {
+  background-image: url("/images/desserts.jpg");
   background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+  width: 100%;
+  height: 78%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.edit form {
+  width: 50%;
+  height: 80%;
+  background-color: #ffffff;
+  border-radius: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.edit .edit-header {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.edit .edit-header h1 {
+  color: #d5878c;
+  font-family: "Adamina";
+  font-size: 2.5em;
+}
+.edit .edit-fields {
+  width: 100%;
+  height: 70%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.edit .edit-fields .edit-lab-inp {
+  width: 100%;
+  height: 15%;
+  display: flex;
+  flex-direction: column;
+}
+.edit .edit-fields .edit-lab-inp label {
+  color: #000000;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 1em;
+  font-size: 1.25em;
+}
+.edit .edit-fields .edit-lab-inp select {
+  width: 100%;
+  height: 50%;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border: 0.1em solid #858585;
+  border-radius: 0;
+  padding-left: 1em;
+  font-size: 1.25em;
+}
+.edit .edit-fields .edit-lab-inp input {
+  width: 100%;
+  height: 50%;
+  border: 0.1em solid #858585;
+  font-size: 1.25em;
+}
+.edit .edit-fields .edit-fields-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: start;
+  width: 40%;
+  height: 100%;
+}
+.edit .edit-fields .edit-fields-details .edit-fields-details-csz {
+  width: 100%;
+  height: 15%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.edit .edit-fields .edit-fields-details .edit-fields-details-csz .city-state-zip {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  height: 100%;
+}
+.edit .edit-fields .edit-fields-details .edit-fields-details-csz .city-state-zip label {
+  color: #000000;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 1em;
+  font-size: 1.25em;
+}
+.edit .edit-fields .edit-fields-details .edit-fields-details-csz .city-state-zip input {
+  width: 100%;
+  height: 50%;
+  border: 0.1em solid #858585;
+  font-size: 1.25em;
+}
+.edit .edit-fields .edit-fields-preferences {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  height: 100%;
+  justify-content: space-evenly;
+  align-items: start;
+}
+.edit .edit-fields .edit-fields-preferences .preference-choices {
+  width: 100%;
+  height: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: start;
+}
+.edit .edit-fields .edit-fields-preferences .preference-choices .lab-select {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+.edit .edit-fields .edit-fields-preferences .preference-choices .lab-select label {
+  color: #000000;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 1em;
+  font-size: 1.25em;
+}
+.edit .edit-fields .edit-fields-preferences .preference-choices .lab-select select {
+  width: 100%;
+  height: 40%;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border: 0.1em solid #858585;
+  border-radius: 0;
+  padding-left: 1em;
+  font-size: 1.25em;
+}
+.edit .edit-fields .edit-fields-preferences .cancel-div {
+  width: 100%;
+  height: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.edit .edit-fields .edit-fields-preferences .cancel-div a {
+  width: 50%;
+  height: 30%;
+  color: #d32a2a;
+  text-decoration: none;
+  text-align: center;
+  display: flex;
+  align-items: start;
+  font-family: "Adamina";
+  font-size: 1.5em;
+}
+.edit .edit-fields .edit-fields-preferences .cancel-div button {
+  color: #ffffff;
+  background-color: #d32a2a;
+  width: 100%;
+  height: 100%;
+  font-family: "Adamina";
+  font-size: 1.5em;
+}
+.edit .edit-buttons {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.edit .edit-buttons a {
+  width: 10%;
+  height: 60%;
+  margin: 0em 0em;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  text-align: center;
+  color: #d5878c;
+  font-family: "Adamina";
+  font-size: 1.5em;
+}
+.edit .edit-buttons button {
+  width: 100%;
+  height: 100%;
+  color: #ffffff;
+  background-color: #d5878c;
+  font-family: "Adamina";
+  font-size: 1em;
+}
+
+.header-div {
+  width: 100%;
+  height: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon-div {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+}
+
+.index {
+  width: 100%;
+  height: 78%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.inner-div {
+  width: 33%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Adamina";
+}
+.inner-div a {
+  font-size: 2em;
+  padding: 0.5em 1em;
+  color: #ffffff;
+  background-color: #d5878c;
+  text-decoration: none;
+}
+.inner-div .icon-img {
+  background-color: #ffffff;
+  margin: 0 0.25em;
+}
+.inner-div .icon-img img {
+  width: 1.5em;
+  height: auto;
+}
+.inner-div img {
+  height: 90%;
+  width: auto;
+}
+
+.personal-details-unsub {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 100%;
+  height: 100%;
+  padding: 1.5em;
+}
+.personal-details-unsub h5 {
+  color: #d5878c;
+  font-family: "Adamina";
+  font-size: 1.75em;
+}
+.personal-details-unsub h6 {
+  color: #000000;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.75em;
+  border-bottom: 0.1em solid #d5878c;
+}
+.personal-details-unsub .button-div {
+  width: 100%;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.personal-details-unsub .button-div a {
+  width: 33%;
+  height: 40%;
+}
+.personal-details-unsub .button-div button {
+  width: 100%;
+  height: 100%;
+  color: #ffffff;
+  font-family: "Adamina";
+  font-size: 1.5em;
+  background-color: #d5878c;
+}
+
+.profile {
+  width: 100%;
+  height: 78%;
+  background-image: url("/images/cupcake.png"), url("/images/cupcake.png");
+  background-size: contain, contain;
+  background-repeat: no-repeat, no-repeat;
+  background-position: right -25% bottom 0px, left -25% bottom 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.profile h1 {
+  font-family: "Adamina";
+  font-size: 3em;
+  color: #d5878c;
+}
+.profile .profile-details {
+  width: 40%;
+  height: 70%;
+  display: flex;
+  border-radius: 1em;
+}
+.profile .profile-details .nft-div {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 7em;
+  color: #ffffff;
+  background-image: url("/images/desserts.jpg");
+  background-size: cover;
+}
+.profile .profile-details .personal-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 50%;
+  height: 100%;
+  padding: 1.5em;
+}
+.profile .profile-details .personal-details h5 {
+  color: #d5878c;
+  font-family: "Adamina";
+  font-size: 1.75em;
+}
+.profile .profile-details .personal-details h6 {
+  color: #000000;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.75em;
+  border-bottom: 0.1em solid #d5878c;
+}
+.profile .profile-details .personal-details .button-div {
+  width: 100%;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.profile .profile-details .personal-details .button-div a {
+  width: 33%;
+  height: 40%;
+}
+.profile .profile-details .personal-details .button-div button {
+  width: 100%;
+  height: 100%;
+  color: #ffffff;
+  font-family: "Adamina";
+  font-size: 1.5em;
+  background-color: #d5878c;
+}
+
+.login {
+  height: 70%;
+  aspect-ratio: 1/1;
+  border: 0.1em solid #000000;
+  padding: 5em;
+}
+.login form {
+  display: flex;
+  flex-direction: column;
+}
+.login button {
+  font-family: "Adamina";
+  font-size: 2em;
+  width: 40%;
+  height: 45px;
+  background-color: #d5878c;
+  color: #ffffff;
+}
+.login input {
+  font-size: 1.5em;
+  width: 100%;
+  height: 35px;
+  border: 0.1em solid #858585;
+}
+.login label {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5em;
+  color: #000000;
+  margin: 1.5em 1em 0em;
+}
+.login h1 {
+  font-family: "Adamina";
+  font-size: 2.5em;
+  color: #d5878c;
+}
+.login h5 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5em;
+  color: #000000;
+}
+.login .button-div {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2em;
+}
+.login .button-div a {
+  text-decoration: none;
+  color: #000000;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5em;
+  margin-top: 1em;
+}
+
+.signup {
+  height: 70%;
+  aspect-ratio: 1/1;
+  border: 0.1em solid #000000;
+  padding: 5em;
+}
+.signup h1 {
+  font-family: "Adamina";
+  font-size: 2.5em;
+  color: #d5878c;
+}
+.signup p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.75em;
+  margin-top: 1.5em;
+}
+.signup .button-div {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2em;
+}
+.signup .button-div a {
+  width: 50%;
+  height: 45px;
+}
+.signup .button-div button {
+  width: 100%;
+  height: 100%;
+  color: #ffffff;
+  background-color: #d5878c;
+  font-family: "Adamina";
+  font-size: 2em;
+}
+
+.signup-form {
+  width: 100%;
+  height: 78%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("/images/desserts.jpg");
+  background-size: cover;
+}
+.signup-form form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #ffffff;
+  border-radius: 2em;
+  height: 80%;
+  width: 20%;
+  padding: 1em;
+}
+.signup-form form h1 {
+  font-family: "Adamina";
+  font-size: 2em;
+  color: #d5878c;
+}
+.signup-form form .label-input-combo {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+}
+.signup-form form .label-input-combo label {
+  margin-left: 1em;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.25em;
+}
+.signup-form form .label-input-combo input {
+  font-size: 1.5em;
+  width: 100%;
+  height: 30px;
+  border: 0.1em solid #858585;
+}
+.signup-form form button {
+  font-family: "Adamina";
+  font-size: 1.5em;
+  color: #ffffff;
+  background-color: #d5878c;
+  padding: 0.5em;
+}
+
+#carousel {
+  width: 100%;
+  height: 90%;
+}
+
+@font-face {
+  font-family: "Adamina";
+  font-style: normal;
+  font-weight: 400;
+  src: local("Adamina Regular"), local("Adamina-Regular"), url("/fonts/Adamina-Regular.ttf");
 }
