--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,23 @@
-<h1>index</h1>
+<div class="index">
+    <div id="carousel" class="carousel slide carousel-fade">
+        <div class="carousel-inner carousel-container">
+            <div class="carousel-item active">
+                <img class="carousel-img" src="/images/strawberry-dessert.jpg" alt="strawberry dessert">
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-img" src="/images/desserts.jpg" alt="desserts">
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-img" src="/images/assortment-of-cakes.jpg" alt="assortment of cakes">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+</div>
