--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,23 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Name Goes Here</title>
+    <title>Maison Valentine</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/styles.css">
 </head>
 <body>
-    <div>   
-        <h1>Maison Valentine</h1>
-        <a href="/subscription/available">Become a Member</a>
-        <a href="#">Search</a>
-        <a href="/users/profile">Profile</a>
-        <a href="#">Cart</a>
+    <header>
+        <div class="header-div">
+            <div class="inner-div">
+                <a href="/subscription/available">Become a Member</a>
+            </div>
+            <div class="inner-div">
+                <img src="https://maisonsvalentine.com/cdn/shop/files/Maison_Valentine_logo.svg?v=6932021519692499332" alt="Maison Valentine Logo">
+            </div>
+            <div class="inner-div">
+                <div class="icon-div">
+                    <a class="icon-img" href="#"><img src="/icons/Search.svg" alt="Search"></a>
+                    <a class="icon-img" href="/users/profile"><img src="/icons/Profile.svg" alt="Profile"></a>
+                    <a class="icon-img" href="#"><img src="/icons/Bag.svg" alt="Bag"></a>
+                </div>
+            </div>
+        </div>
+        <hr>
         <nav>
             <a href="/">HOME</a>
             <a href="#">ORDER ONLINE</a>
             <a href="#">ABOUT</a>
             <a href="#">CONTACT</a>
         </nav>
-    </div>
+        <div class="banner-div">
+            <a href="#">Delivery available via: Doordash</a>
+            <a href="#">Order your Birthday Cake with us!</a>
+            <a href="#">Contact us for all your catering inquiries</a>
+        </div>
+    </header>
     {{{body}}}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
