--- a/views/subscriptions/all-subscriptions.hbs
+++ b/views/subscriptions/all-subscriptions.hbs
@@ -1,4 +1,47 @@
-<h1>Membership plans</h1>
-
-<a href="/subscription/payment">Subscription Type 1</a>
-<a href="/subscription/payment">Subscription Type 2</a>
+<div class="subscriptions">
+    <div class="subscriptions-header">
+        <h1>Subscriptions</h1>
+    </div>
+    <div class="subscriptions-type">
+        <div class="sub-type-container">
+            <div class="sub-card">
+                <div class="sub-inner">
+                    <div class="inner-header">
+                        <h1>Twice a Month Dessert Delights</h1>
+                    </div>
+                    <div class="inner-img-2"></div>
+                    <div class="inner-btn">
+                        <a href="/subscription/payment">Subscribe</a>
+                    </div>
+                </div>
+            </div>
+            <div class="sub-text">
+                <h1>What is Included?</h1>
+                <p>Receive 12 mouthwatering desserts delivered at your doorstep every other week</p>
+            </div>
+        </div>
+        <div class="sub-divide"></div>
+        <div class="sub-type-container">
+            <div class="sub-card">
+                <div class="sub-inner">
+                    <div class="inner-header">
+                        <h1>Weekly Dessert Delights</h1>
+                    </div>
+                    <div class="inner-img"></div>
+                    <div class="inner-btn">
+                        <a href="/subscription/payment">Subscribe</a>
+                    </div>
+                </div>
+            </div>
+            <div class="sub-text">
+                <h1>What is Included?</h1>
+                <p>Enjoy 6 scrumptious desserts delivered to you like clockwork every week</p>
+            </div>
+        </div>
+    </div>
+    <div class="subscriptions-pitch">
+        <h5><span>One of a kind AI generated image</span></h5>
+        <h5>10% discount on all Maison Valentine dessert purchases</h5>
+        <h5>Exclusive access to our delectable events and experiences</h5>
+    </div>
+</div>
