--- a/views/users/preferences.hbs
+++ b/views/users/preferences.hbs
@@ -3,25 +3,25 @@
 
 <p> These questions are important for your unique Ai Generated NFT.</p>
 
-<form action="Falta la ruta " method="post">
-    <label for="dessert-style">Which dessert style appeals to you most?</label>
-    <select name="dessert-style" id="dessert-style">
+<form action="/users/preferences" method="post">
+    <label for="preference1">Which dessert style appeals to you most?</label>
+    <select name="preference1" id="preference1">
         <option value="" disabled selected>Select Answer</option>
         <option value="creamy">Creamy and Indulgent</option>
         <option value="balanced">Balanced Flavors and Textures</option>
         <option value="fresh">Fresh and Fruity</option>
     </select>
 
-    <label for="dessert-beverage">What's your favorite dessert and beverage pairing?</label>
-    <select name="dessert-beverage" id="dessert-beverage">
+    <label for="preference2">What's your favorite dessert and beverage pairing?</label>
+    <select name="preference2" id="preference2">
         <option value="" disabled selected>Select Answer</option>
         <option value="coffee">Coffee and cake</option>
         <option value="wine">Wine and chocolate</option>
         <option value="tea">Tea and pastries</option>
     </select>
 
-    <label for="seasonal">What's your favorite seasonal dessert?</label>
-    <select name="seasonal" id="seasonal">
+    <label for="preference3">What's your favorite seasonal dessert?</label>
+    <select name="preference3" id="preference3">
         <option value="" disabled selected>Select Answer</option>
         <option value="fall">Pumpkin spice treats (Fall)</option>
         <option value="winter">Peppermint delights (Winter)</option>
