--- a/views/users/user-edit.hbs
+++ b/views/users/user-edit.hbs
@@ -10,7 +10,7 @@
                     <label for="subType">Subscription</label>
                     <select name="subType" id="subType">
                         <option value="" disabled selected>Select Subscription</option>                              
-                        <option value="Dessert Duo Delight">Dessert Duo Deligh</option>
+                        <option value="Dessert Duo Delight">Dessert Duo Delight</option>
                         <option value="Weekly Sweet Symphony">Weekly Sweet Symphony</option>
                     </select>
                 </div>
