--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -350,6 +350,26 @@ nav a {
   background-color: #d5878c;
 }
 
+.payment {
+  width: 100%;
+  height: 78%;
+  background-image: url("/images/desserts.jpg");
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.payment form {
+  width: 50%;
+  height: 80%;
+  background-color: #ffffff;
+  border-radius: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
 .profile {
   width: 100%;
   height: 78%;
@@ -563,6 +583,144 @@ nav a {
   color: #ffffff;
   background-color: #d5878c;
   padding: 0.5em;
+}
+
+.subscriptions {
+  width: 100%;
+  height: 78%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.subscriptions .subscriptions-header {
+  width: 100%;
+  height: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.subscriptions .subscriptions-header h1 {
+  color: #d5878c;
+  font-family: "Adamina";
+  font-size: 3em;
+}
+.subscriptions .subscriptions-type {
+  width: 100%;
+  height: 65%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.subscriptions .subscriptions-type .sub-type-container {
+  width: 30%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.subscriptions .subscriptions-type .sub-type-container .sub-card {
+  width: 50%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 0.5em solid #d5878c;
+  border-radius: 2em;
+}
+.subscriptions .subscriptions-type .sub-type-container .sub-card .sub-inner {
+  width: 95%;
+  height: 95%;
+  background-color: #d5878c;
+  border-radius: 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.subscriptions .subscriptions-type .sub-type-container .sub-card .sub-inner .inner-header {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.subscriptions .subscriptions-type .sub-type-container .sub-card .sub-inner .inner-header h1 {
+  font-family: "Adamina";
+  font-size: 1.5em;
+  color: #ffffff;
+}
+.subscriptions .subscriptions-type .sub-type-container .sub-card .sub-inner .inner-img {
+  width: 100%;
+  height: 70%;
+  background-image: url("/images/desserts.jpg");
+  background-size: cover;
+}
+.subscriptions .subscriptions-type .sub-type-container .sub-card .sub-inner .inner-img-2 {
+  width: 100%;
+  height: 70%;
+  background-image: url("/images/assortment-of-cakes.jpg");
+  background-size: cover;
+}
+.subscriptions .subscriptions-type .sub-type-container .sub-card .sub-inner .inner-btn {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.subscriptions .subscriptions-type .sub-type-container .sub-card .sub-inner .inner-btn a {
+  width: 33%;
+  height: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  text-align: center;
+  color: #d5878c;
+  background-color: #ffffff;
+  font-family: "Adamina";
+  font-size: 1.25em;
+}
+.subscriptions .subscriptions-type .sub-type-container .sub-text {
+  width: 100%;
+  height: 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.subscriptions .subscriptions-type .sub-type-container .sub-text h1 {
+  color: #d5878c;
+  font-family: "Adamina";
+  font-size: 1.5em;
+}
+.subscriptions .subscriptions-type .sub-type-container .sub-text p {
+  width: 50%;
+  font-size: 1.25em;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.subscriptions .subscriptions-type .sub-divide {
+  width: 1px;
+  height: 100%;
+  background-color: #d5878c;
+}
+.subscriptions .subscriptions-pitch {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.subscriptions .subscriptions-pitch h5 {
+  color: #000000;
+  font-family: "Adamina";
+  font-size: 1.5em;
+}
+.subscriptions .subscriptions-pitch h5 span {
+  color: #d5878c;
 }
 
 #carousel {
