--- a/views/subscriptions/payment.hbs
+++ b/views/subscriptions/payment.hbs
@@ -1,41 +1,39 @@
-<div class="background-dessert">
-<form action="/subscription/payment" method="post">
-    <input type="radio" name="subType" id="subType1" value="Weekly Dessert Delights" checked>
-    <label for="subType1">Weekly Dessert Delights</label>
-    <input type="radio" name="subType" id="subType2" value="Twice a Month Dessert Delights">
-    <label for="subType2">Twice a Month Dessert Delights</label>
-    <br>
+<div class="payment">
+    <form action="/subscription/payment" method="post">
+        <input type="radio" name="subType" id="subType1" value="Weekly Dessert Delights" checked>
+        <label for="subType1">Weekly Dessert Delights</label>
+        <input type="radio" name="subType" id="subType2" value="Twice a Month Dessert Delights">
+        <label for="subType2">Twice a Month Dessert Delights</label>
+        <br>
 
-    <label for="cardNum">Card Number</label>
-    <input type="text" name="cardNum" id="cardNum">
+        <label for="cardNum">Card Number</label>
+        <input type="text" name="cardNum" id="cardNum">
 
-    <label for="cardName">Name on Card</label>
-    <input type="text" name="cardName" id="cardName">
+        <label for="cardName">Name on Card</label>
+        <input type="text" name="cardName" id="cardName">
 
-    <label for="expDate">Exp Date</label>
-    <input type="text" name="expDate" id="expDate">
+        <label for="expDate">Exp Date</label>
+        <input type="text" name="expDate" id="expDate">
 
-    <label for="cvv">CVV</label>
-    <input type="text" name="cvv" id="cvv">
+        <label for="cvv">CVV</label>
+        <input type="text" name="cvv" id="cvv">
 
-    <label for="address">Address</label>
-    <input type="text" name="address" id="address">
+        <label for="address">Address</label>
+        <input type="text" name="address" id="address">
 
-    <label for="city">City</label>
-    <input type="text" name="city" id="city">
+        <label for="city">City</label>
+        <input type="text" name="city" id="city">
 
-    <label for="state">State</label>
-    <input type="text" name="state" id="state">
+        <label for="state">State</label>
+        <input type="text" name="state" id="state">
 
-    <label for="zip">Zip Code</label>
-    <input type="text" name="zip" id="zip">
+        <label for="zip">Zip Code</label>
+        <input type="text" name="zip" id="zip">
 
-    {{#if errorMessage}}
-        <h5>{{errorMessage}}</h5>
-    {{/if}}
+        {{#if errorMessage}}
+            <h5>{{errorMessage}}</h5>
+        {{/if}}
 
-    <button type="submit">Continue</button>
-
-</form>
-
+        <button type="submit">Continue</button>
+    </form>
 </div>
