--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -360,7 +360,7 @@ nav a {
   align-items: center;
 }
 .payment form {
-  width: 50%;
+  width: 30%;
   height: 80%;
   background-color: #ffffff;
   border-radius: 2em;
@@ -368,6 +368,10 @@ nav a {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+}
+.payment form .label-input-div {
+  display: flex;
+  flex-direction: column;
 }
 
 .profile {
