--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -360,7 +360,7 @@ nav a {
   align-items: center;
 }
 .payment form {
-  width: 30%;
+  width: 20%;
   height: 80%;
   background-color: #ffffff;
   border-radius: 2em;
@@ -369,9 +369,164 @@ nav a {
   justify-content: space-evenly;
   align-items: center;
 }
+.payment form a {
+  width: 25%;
+  height: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
+.payment form a button {
+  width: 100%;
+  height: 100%;
+  background-color: #d5878c;
+  color: #ffffff;
+  font-family: "Adamina";
+  font-size: 1.5em;
+}
+.payment form h1 {
+  color: #d5878c;
+  font-family: "Adamina";
+  font-size: 2em;
+}
 .payment form .label-input-div {
   display: flex;
   flex-direction: column;
+  width: 70%;
+}
+.payment form .label-input-div label {
+  padding-left: 0.5em;
+  font-size: 1em;
+}
+.payment form .label-input-div select {
+  width: 100%;
+  height: 25px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border: 0.1em solid #858585;
+  border-radius: 0em;
+  padding-left: 0.5em;
+  font-size: 1.5em;
+}
+.payment form .label-input-div input {
+  width: 100%;
+  height: 25px;
+  border: 0.1em solid #858585;
+  padding-left: 0.5em;
+  font-size: 1.5em;
+}
+.payment form .date-exp-div {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.payment form .date-exp-div input {
+  width: 50%;
+}
+.payment form .city-state-zip-div {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.payment form .city-state-zip-div input {
+  width: 60%;
+}
+
+.preferences {
+  width: 100%;
+  height: 78%;
+  background-image: url("/images/desserts.jpg");
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.preferences form {
+  width: 20%;
+  height: 80%;
+  background-color: #ffffff;
+  border-radius: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding: 2em 3em;
+}
+.preferences form .preferences-header {
+  width: 100%;
+  height: 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.preferences form .preferences-header h1 {
+  font-family: "Adamina";
+  font-size: 2.5em;
+  color: #d5878c;
+}
+.preferences form .preferences-header h5 {
+  font-family: "Adamina";
+  font-size: 1.5em;
+  color: #000000;
+}
+.preferences form .preferences-body {
+  width: 100%;
+  height: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.preferences form .preferences-body .preference-label-select {
+  width: 100%;
+  height: 20%;
+  display: flex;
+  flex-direction: column;
+}
+.preferences form .preferences-body .preference-label-select label {
+  font-family: Arial, Helvetica, sans-serif;
+  color: #000000;
+  font-size: 1.25em;
+  margin-left: 1em;
+}
+.preferences form .preferences-body .preference-label-select select {
+  width: 100%;
+  height: 30px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border: 0.1em solid #858585;
+  border-radius: 0em;
+  padding-left: 1em;
+  font-size: 1.5em;
+}
+.preferences form .preferences-btn {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.preferences form .preferences-btn a {
+  width: 40%;
+  height: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
+.preferences form .preferences-btn button {
+  width: 100%;
+  height: 100%;
+  background-color: #d5878c;
+  color: #ffffff;
+  font-family: "Adamina";
+  font-size: 1.5em;
 }
 
 .profile {
