popup delete message

--- a/views/users/user-edit.hbs
+++ b/views/users/user-edit.hbs
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="cancel-div">
-                    <a href="/subscription/cancel">Cancel Subscription</a>
+                    <a href="#" id="popup">Cancel Subscription</a>
                 </div>
             </div>
             {{/if}}
@@ -88,11 +88,3 @@
         </div>
     </form>
 </div>
-
-{{!-- <div class="cancel-div" id="popup" style="display: none;">
-    <p>Do you really want to cancel your Subscription?</p>
-    <div class="edit-buttons">
-        <button id="confirm-cancel">Yes</button>
-        <button id="deny-cancel">No</button>
-    </div>
-</div> --}}
