--- a/views/users/user-profile.hbs
+++ b/views/users/user-profile.hbs
@@ -2,7 +2,9 @@
     <h1>My Profile</h1>
     <div class="profile-details">
         {{#if subscription}}
-            <div class="nft-div">NFT</div>
+            <div class="nft-div">
+                <img src={{aiImg}} alt="AI Image">
+            </div>
             <div class="personal-details">
                 <div class="">
                     <h5>Name</h5>
