--- a/views/users/user-edit.hbs
+++ b/views/users/user-edit.hbs
@@ -51,8 +51,7 @@
                     <div class="lab-select">
                         <label for="preference1">Which dessert style appeals to you most?</label>
                         <select name="preference1" id="preference1">
-                            <option value="" disabled selected>Select Answer</option>
-                            <option value="creamy">Creamy and Indulgent</option>
+                            <option value="creamy" selected>Creamy and Indulgent</option>
                             <option value="balanced">Balanced Flavors and Textures</option>
                             <option value="fresh">Fresh and Fruity</option>
                         </select>
@@ -60,8 +59,7 @@
                     <div class="lab-select">
                         <label for="preference2">What's your favorite dessert and beverage pairing?</label>
                         <select name="preference2" id="preference2">
-                            <option value="" disabled selected>Select Answer</option>
-                            <option value="coffee">Coffee and cake</option>
+                            <option value="coffee" selected>Coffee and cake</option>
                             <option value="wine">Wine and chocolate</option>
                             <option value="tea">Tea and pastries</option>
                         </select>   
@@ -69,8 +67,7 @@
                     <div class="lab-select">
                         <label for="preference3">What's your favorite seasonal dessert?</label>
                         <select name="preference3" id="preference3">
-                            <option value="" disabled selected>Select Answer</option>
-                            <option value="fall">Pumpkin spice treats (Fall)</option>
+                            <option value="fall" selected>Pumpkin spice treats (Fall)</option>
                             <option value="winter">Peppermint delights (Winter)</option>
                             <option value="summer">Berry-infused desserts (Summer)</option>
                         </select>
