added easter eggs

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -31,9 +31,9 @@
         <hr>
         <nav>
             <a href="/">HOME</a>
-            <a href="#">ORDER ONLINE</a>
-            <a href="#">ABOUT</a>
-            <a href="#">CONTACT</a>
+            <a href="https://nicholasllobell.github.io/Project-1/">ORDER ONLINE</a>
+            <a href="https://xd001z.github.io/War/">ABOUT</a>
+            <a href="https://selacirc.github.io/Lab-game-project1/">CONTACT</a>
         </nav>
         <div class="banner-div">
             <a href="#">Delivery available via: Doordash</a>
